# thinhda_dev_blog

./: .gitignore  README.md  pyproject.toml
ai21_sample/: app.py  chat.py
ask_my_docs/: .gitignore  app.py  collect_data.py  crawler.py  llm.py  models.py  requirements.txt  stream_token_handler.py  vector_storage.py
audio_mixing_demo/: README.md  app.py  audio_mixer.py  requirements.txt
authorization_fastapi/: Makefile  app.py  app_scope.py  pyproject.toml  test_auth.py
check-phone/: app.py  output.json
context_var/: app.py
crawl-ai/: app.py
cython_example/: Makefile  README.md  main.py  pyproject.toml  setup.py  util.py
dd-metrics/: app.py
deep_seek_r1/: .env.local  .gitignore  Makefile  docker-compose.yaml
deepseek_hf/: app.py
deepseek_langchain/: app.py
deepseek_unofficial_api/: app.py  chat_deepseek_langchain.py  selenium_app.py
function_calling/: .env.template  README.md  app.py  pyproject.toml
generate_image/: app.py
graphql_fastapi/: Dockerfile  README.md  pyproject.toml  requirements.txt
graphql_fastapi/graphql_fastapi/: main.py
graphql_fastapi/tests/: test_app.py
http2/: cert.pem  client_http1.py  client_http2.py  key.pem  server_http1.py  server_http2.py
hugging-chat/: app.py
llm-prod/: app.py  requirements.txt
pandas/: snippet_1.py  snippet_2.py  snippet_3.py  snippet_4.py  snippet_5.py  snippet_date.py  snippet_gumpy.py  snippet_mem.py  snippet_memory_profiler.py  snippet_spare.py
pandas-cthon/: Makefile  README.md  compare_2.py  perf-cthon.py  recursive_calculation.c  recursive_calculation.pyx  setup.py
pandas-cthon/compare_3/: compare_3.py  cython_functions.c  cython_functions.pyx  setup.py
payment_testcontainers/: app.py  test_app.py
pr_agent_demo/: Makefile  app.py  pyproject.toml
pr_agent_demo/settings/: configuration.toml  pr_reviewer_prompt.txt
py313/: app.py  docker-compose.yaml
ragapp/: docker-compose.yml
redis_auto_scaling/: Dockerfile  Makefile  app.py  celeryconfig.py  redis.yaml  requirements.txt  scaled-object.yaml  tasks.py  worker.yaml
serverless/: README.md
serverless/api/: hello.js
stt/: sample.py
subinterpreter/: performance.py  sample.py
temperature-top-k/: app.py
testcontainers/: requirements.txt  test_app.py
tot/: openai.logs  pyproject.toml
tot/tot/: app.py  app_2.py
trading/: Makefile  adjust_data.py  app.py  download.py  parse_log.py
trading/config/: long_ema_crossover_template.yaml
trading/src/config/: ema_crossover.yaml  long_ema_crossover.yaml  macd.yaml
trading/src/strategies/: long_ema_crossover.py
vectordb/: .env.template  app.py
