[tool.poetry]
name = "authorization_fastapi"
version = "0.1.0"
description = ""
authors = ["thinh.dang <thinh.dang@trustingsocial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
httpx = "^0.25.1"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pytest = "^7.4.3"
hypercorn = "^0.15.0"
python-multipart = "^0.0.6"
pytest-asyncio = "^0.21.1"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
