[tool.poetry]
name = "cython_example"
version = "0.1.0"
description = ""
authors = ["thinh.dang <thinh.dang@trustingsocial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cython = "^3.0.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
