[tool.poetry]
name = "pr_agent_demo"
version = "0.1.0"
description = ""
authors = ["thinh-dang-ts <thinh.dang2@trustingsocial.com>"]
readme = "README.md"
packages = [{include = "pr_agent_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
pr-agent = "^0.2.4"
python-dotenv = ">=1.0,<2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
